--- a/pages/index.html
+++ b/pages/index.html
@@ -321,7 +321,7 @@
             </header>
             <!-- Header ======================-->
 
-            <div class="offcanvas d-none d-lg-block offcanvas-end overflow-hidden" data-bs-scroll="false" tabindex="-1" id="offcanvasDesktop">
+           <div class="offcanvas d-none d-lg-block offcanvas-end" data-bs-scroll="false" tabindex="-1" id="offcanvasDesktop">
 
                 <div class="offcanvas-header justify-content-end">
                     <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
